Implement hmm tagger with accuracy above 95 perecent

--- a/Projects/4_HMM Tagger/HMM Tagger.ipynb
+++ b/Projects/4_HMM Tagger/HMM Tagger.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
     "    return res_dct\n",
     "\n",
     "# Calculate C(t_i, w_i)\n",
-    "emission_counts = pair_counts(data.testing_set.Y, data.testing_set.X)\n",
+    "emission_counts = pair_counts(data.training_set.Y, data.training_set.X)\n",
     "\n",
     "assert len(emission_counts) == 12, \\\n",
     "       \"Uh oh. There should be 12 tags in your dictionary.\"\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,6 @@
     "\n",
     "# TODO: calculate the frequency of each tag being assigned to each word (hint: similar, but not\n",
     "# the same as the emission probabilities) and use it to fill the mfc_table\n",
-    "\n",
     "word_counts = pair_counts(data.training_set.Y, data.training_set.X)\n",
     "mfc_table = {}\n",
     "lst = [(word, tag, word_count) for tag, word_dct in word_counts.items() for word, word_count in word_dct.items()]\n",
@@ -475,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +614,7 @@
      "output_type": "stream",
      "text": [
       "training accuracy mfc_model: 95.72%\n",
-      "testing accuracy mfc_model: 93.01%\n"
+      "testing accuracy mfc_model: 93.02%\n"
      ]
     },
     {
@@ -627,7 +626,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +685,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +736,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +789,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +837,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,20 +882,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'is_silent'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-aa34f8bb9a10>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;31m# NOTE: YOU SHOULD NOT NEED TO MODIFY ANYTHING BELOW THIS LINE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;31m# finalize the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m \u001b[0mbasic_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtag\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbasic_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtag\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtraining_set\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtagset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m        \u001b[0;34m\"Every state in your network should use the name of the associated tag, which must be one of the training set tags.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpomegranate/hmm.pyx\u001b[0m in \u001b[0;36mpomegranate.hmm.HiddenMarkovModel.bake\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'is_silent'"
-     ]
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your HMM network topology looks good!</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -905,19 +905,22 @@
     "# TODO: create states with emission probability distributions P(word | tag) and add to the model\n",
     "# (Hint: you may need to loop & create/add new states)\n",
     "states = []\n",
-    "for tag, word_dict in emission_counts.items():\n",
+    "for tag, word_dict in emission_counts.items() :\n",
     "    dist_tag = DiscreteDistribution({word: cn/tag_unigrams[tag] for word, cn in word_dict.items()})\n",
     "    states.append(State(dist_tag, name=tag))\n",
+    "\n",
     "\n",
     "basic_model.add_states(states)\n",
     "state_names = [s.name for s in states]\n",
     "state_index = {tag:num for num, tag in enumerate(state_names)}\n",
+    "\n",
     "\n",
     "# Start transition\n",
     "total_start = sum(tag_starts.values())\n",
     "for tag, cn in tag_starts.items():\n",
     "    sname = state_index[tag]\n",
     "    basic_model.add_transition(basic_model.start, states[state_index[tag]], cn/total_start)\n",
+    "\n",
     "\n",
     "# End transition\n",
     "total_end = sum(tag_ends.values())\n",
@@ -928,7 +931,7 @@
     "# TODO: add edges between states for the observed transition frequencies P(tag_i | tag_i-1)\n",
     "# (Hint: you may need to loop & add transitions\n",
     "for key, value in tag_bigrams.items():\n",
-    "    basic_model.add_transition(key[1], key[0], value/tag_unigrams[key[0]])\n",
+    "    basic_model.add_transition(states[state_index[key[0]]], states[state_index[key[1]]], value/tag_unigrams[key[0]])\n",
     "\n",
     "\n",
     "# NOTE: YOU SHOULD NOT NEED TO MODIFY ANYTHING BELOW THIS LINE\n",
@@ -945,11 +948,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training accuracy basic hmm model: 97.53%\n",
+      "testing accuracy basic hmm model: 95.96%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your HMM tagger accuracy looks correct! Congratulations, you've finished the project.</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hmm_training_acc = accuracy(data.training_set.X, data.training_set.Y, basic_model)\n",
     "print(\"training accuracy basic hmm model: {:.2f}%\".format(100 * hmm_training_acc))\n",
@@ -971,9 +996,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence Key: b100-28144\n",
+      "\n",
+      "Predicted labels:\n",
+      "-----------------\n",
+      "['CONJ', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'CONJ', 'NOUN', 'NUM', '.', '.', 'NOUN', '.', '.']\n",
+      "\n",
+      "Actual labels:\n",
+      "--------------\n",
+      "('CONJ', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'CONJ', 'NOUN', 'NUM', '.', '.', 'NOUN', '.', '.')\n",
+      "\n",
+      "\n",
+      "Sentence Key: b100-23146\n",
+      "\n",
+      "Predicted labels:\n",
+      "-----------------\n",
+      "['PRON', 'VERB', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', 'NOUN', 'VERB', 'VERB', '.', 'ADP', 'VERB', 'DET', 'NOUN', 'ADP', 'NOUN', 'ADP', 'DET', 'NOUN', '.']\n",
+      "\n",
+      "Actual labels:\n",
+      "--------------\n",
+      "('PRON', 'VERB', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', 'NOUN', 'VERB', 'VERB', '.', 'ADP', 'VERB', 'DET', 'NOUN', 'ADP', 'NOUN', 'ADP', 'DET', 'NOUN', '.')\n",
+      "\n",
+      "\n",
+      "Sentence Key: b100-35462\n",
+      "\n",
+      "Predicted labels:\n",
+      "-----------------\n",
+      "['DET', 'ADJ', 'NOUN', 'VERB', 'VERB', 'VERB', 'ADP', 'DET', 'ADJ', 'ADJ', 'NOUN', 'ADP', 'DET', 'ADJ', 'NOUN', '.', 'ADP', 'ADJ', 'NOUN', '.', 'CONJ', 'ADP', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', '.', 'ADJ', '.', 'CONJ', 'ADJ', 'NOUN', 'ADP', 'ADJ', 'NOUN', '.']\n",
+      "\n",
+      "Actual labels:\n",
+      "--------------\n",
+      "('DET', 'ADJ', 'NOUN', 'VERB', 'VERB', 'VERB', 'ADP', 'DET', 'ADJ', 'ADJ', 'NOUN', 'ADP', 'DET', 'ADJ', 'NOUN', '.', 'ADP', 'ADJ', 'NOUN', '.', 'CONJ', 'ADP', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', '.', 'ADJ', '.', 'CONJ', 'ADJ', 'NOUN', 'ADP', 'ADJ', 'NOUN', '.')\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for key in data.testing_set.keys[:3]:\n",
     "    print(\"Sentence Key: {}\\n\".format(key))\n",
@@ -1000,9 +1065,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[NbConvertApp] Converting notebook HMM Tagger.ipynb to html',\n",
+       " '[NbConvertApp] Writing 352619 bytes to HMM Tagger.html',\n",
+       " '[NbConvertApp] Converting notebook HMM warmup (optional).ipynb to html',\n",
+       " '[NbConvertApp] Writing 309843 bytes to HMM warmup (optional).html']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "!!jupyter nbconvert *.ipynb"
    ]
@@ -1032,9 +1111,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package brown to /Users/kerwei/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/brown.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('The', 'AT'),\n",
+       " ('Fulton', 'NP-TL'),\n",
+       " ('County', 'NN-TL'),\n",
+       " ('Grand', 'JJ-TL'),\n",
+       " ('Jury', 'NN-TL'),\n",
+       " ('said', 'VBD'),\n",
+       " ('Friday', 'NR'),\n",
+       " ('an', 'AT'),\n",
+       " ('investigation', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " (\"Atlanta's\", 'NP$'),\n",
+       " ('recent', 'JJ'),\n",
+       " ('primary', 'NN'),\n",
+       " ('election', 'NN'),\n",
+       " ('produced', 'VBD'),\n",
+       " ('``', '``'),\n",
+       " ('no', 'AT'),\n",
+       " ('evidence', 'NN'),\n",
+       " (\"''\", \"''\"),\n",
+       " ('that', 'CS'),\n",
+       " ('any', 'DTI'),\n",
+       " ('irregularities', 'NNS'),\n",
+       " ('took', 'VBD'),\n",
+       " ('place', 'NN'),\n",
+       " ('.', '.')]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk import pos_tag, word_tokenize\n",
