exercice|wip: cryptarithmetic puzzle done

--- a/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
+++ b/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
@@ -29,10 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -40,10 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
@@ -78,18 +74,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ca_solver = Solver()  # create an instance of a Z3 CSP solver\n",
     "\n",
     "F = Int('F')  # create an z3.Int type variable instance called \"F\"\n",
     "ca_solver.add(0 <= F, F <= 9)  # add constraints to the solver: 0 <= F <= 9\n",
-    "# ...\n",
-    "# TODO: Add all the missing letter variables"
+    "\n",
+    "for letter in 'ORTUW':\n",
+    "    exec(\"{} = Int('{}')\".format(letter, letter)) # create an z3.Int type variable instance\n",
+    "\n",
+    "for z3_int in [O,R,T,U,W]:\n",
+    "    ca_solver.add(0 <= z3_int, z3_int <= 9)  # add constraints to the solver: 0 <= letter <= 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[F >= 0,\n",
+       " F <= 9,\n",
+       " O >= 0,\n",
+       " O <= 9,\n",
+       " R >= 0,\n",
+       " R <= 9,\n",
+       " T >= 0,\n",
+       " T <= 9,\n",
+       " U >= 0,\n",
+       " U <= 9,\n",
+       " W >= 0,\n",
+       " W <= 9]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ca_solver"
    ]
   },
   {
@@ -102,17 +131,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Add constraints prohibiting leading digits F & T from taking the value 0\n",
-    "ca_solver.add( # YOUR CODE HERE )\n",
+    "# Add constraints prohibiting leading digits F & T from taking the value 0\n",
+    "ca_solver.add(F!=0)\n",
+    "ca_solver.add(T!=0)\n",
     "\n",
-    "# TODO: Add a Distinct constraint for all the variables\n",
-    "ca_solver.add( # YOUR CODE HERE )"
+    "# Add a Distinct constraint for all the variables\n",
+    "ca_solver.add(Distinct([F,O,R,T,U,W]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[F >= 0,\n",
+       " F <= 9,\n",
+       " O >= 0,\n",
+       " O <= 9,\n",
+       " R >= 0,\n",
+       " R <= 9,\n",
+       " T >= 0,\n",
+       " T <= 9,\n",
+       " U >= 0,\n",
+       " U <= 9,\n",
+       " W >= 0,\n",
+       " W <= 9,\n",
+       " F != 0,\n",
+       " T != 0,\n",
+       " Distinct(F, O, R, T, U, W)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ca_solver"
    ]
   },
   {
@@ -132,24 +194,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: add any required variables and/or constraints to solve the cryptarithmetic puzzle\n",
+    "# Add any required variables and/or constraints to solve the cryptarithmetic puzzle\n",
     "# Primary solution using single constraint for the cryptarithmetic equation\n",
-    "ca_solver.add( # YOUR CODE HERE)"
+    "ca_solver.add(((T + T)*10**2 + (W + W)*10**1 + (O + O)*10**0) == (F*10**3 + O*10**2 + U*10**1 + R*10**0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[F >= 0,\n",
+       " F <= 9,\n",
+       " O >= 0,\n",
+       " O <= 9,\n",
+       " R >= 0,\n",
+       " R <= 9,\n",
+       " T >= 0,\n",
+       " T <= 9,\n",
+       " U >= 0,\n",
+       " U <= 9,\n",
+       " W >= 0,\n",
+       " W <= 9,\n",
+       " F != 0,\n",
+       " T != 0,\n",
+       " Distinct(F, O, R, T, U, W),\n",
+       " (T + T)*100 + (W + W)*10 + (O + O)*1 ==\n",
+       " F*1000 + O*100 + U*10 + R*1]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ca_solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  T W O  :    8 4 6\n",
+      "+ T W O  :  + 8 4 6\n",
+      "-------  :  -------\n",
+      "F O U R  :  1 6 9 2\n"
+     ]
+    }
+   ],
    "source": [
     "assert ca_solver.check() == sat, \"Uh oh...the solver did not find a solution. Check your constraints.\"\n",
     "print(\"  T W O  :    {} {} {}\".format(ca_solver.model()[T], ca_solver.model()[W], ca_solver.model()[O]))\n",
@@ -185,7 +290,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -206,7 +314,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -232,7 +343,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -243,7 +357,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -259,9 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Map Coloring Challenge Problems\n",
     "1. Generalize the procedure for this problem and try it on a larger map (countries in Africa, states in the USA, etc.)\n",
@@ -291,7 +406,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -307,7 +425,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -354,7 +475,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -381,7 +505,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -410,7 +537,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -433,7 +563,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -461,7 +594,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -475,9 +608,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
